Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/qute-reference.adoc.po
@@ -124,7 +124,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:75
 msgid "So the workflow is simple:"
-msgstr ""
+msgstr "なので、ワークフローはシンプルです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:77
