--- a/l10n/po/ja_JP/_versions/1.11/guides/security.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security.adoc.po
@@ -355,7 +355,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security.adoc:155
 msgid "Please see link:vertx#same-site-cookie[SameSite cookies] for information about adding a https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Set-Cookie/SameSite[SameSite] cookie property to any of the cookies set by a Quarkus endpoint."
-msgstr ""
+msgstr "Quarkusエンドポイントによって設定されたCookieに link:https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Set-Cookie/SameSite[SameSite] Cookieプロパティーを追加する方法については、 link:vertx#same-site-cookie[SameSite Cookie] を参照してください。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/security.adoc:156
