--- a/l10n/po/ja_JP/_versions/1.7/guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/qute-reference.adoc.po
@@ -115,7 +115,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:66
 msgid "So the workflow is simple:"
-msgstr ""
+msgstr "なので、ワークフローはシンプルです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:68
