--- a/l10n/po/ja_JP/_versions/1.7/guides/spring-web.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/spring-web.adoc.po
@@ -607,7 +607,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/spring-web.adoc:378
 #, no-wrap
 msgid "Supported Spring Web functionalities"
-msgstr ""
+msgstr "サポートされているSpring Webの機能"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-web.adoc:382
@@ -648,96 +648,96 @@ msgstr "Comments"
 #: upstream/_versions/1.7/guides/spring-web.adoc:392
 #, no-wrap
 msgid "@RestController"
-msgstr ""
+msgstr "@RestController"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:395
 #, no-wrap
 msgid "@RequestMapping"
-msgstr ""
+msgstr "@RequestMapping"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:397
 #, no-wrap
 msgid "@GetMapping"
-msgstr ""
+msgstr "@GetMapping"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:399
 #, no-wrap
 msgid "@PostMapping"
-msgstr ""
+msgstr "@PostMapping"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:401
 #, no-wrap
 msgid "@PutMapping"
-msgstr ""
+msgstr "@PutMapping"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:403
 #, no-wrap
 msgid "@DeleteMapping"
-msgstr ""
+msgstr "@DeleteMapping"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:405
 #, no-wrap
 msgid "@PatchMapping"
-msgstr ""
+msgstr "@PatchMapping"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:407
 #: upstream/_versions/1.7/guides/spring-web.adoc:490
 #, no-wrap
 msgid "@RequestParam"
-msgstr ""
+msgstr "@RequestParam"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:409
 #, no-wrap
 msgid "@RequestHeader"
-msgstr ""
+msgstr "@RequestHeader"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:411
 #, no-wrap
 msgid "@MatrixVariable"
-msgstr ""
+msgstr "@MatrixVariable"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:413
 #: upstream/_versions/1.7/guides/spring-web.adoc:494
 #, no-wrap
 msgid "@PathVariable"
-msgstr ""
+msgstr "@PathVariable"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:415
 #, no-wrap
 msgid "@CookieValue"
-msgstr ""
+msgstr "@CookieValue"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:417
 #: upstream/_versions/1.7/guides/spring-web.adoc:498
 #, no-wrap
 msgid "@RequestBody"
-msgstr ""
+msgstr "@RequestBody"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:419
 #: upstream/_versions/1.7/guides/spring-web.adoc:506
 #, no-wrap
 msgid "@ResponseStatus"
-msgstr ""
+msgstr "@ResponseStatus"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:421
 #: upstream/_versions/1.7/guides/spring-web.adoc:510
 #, no-wrap
 msgid "@ExceptionHandler"
-msgstr ""
+msgstr "@ExceptionHandler"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:422
@@ -762,23 +762,23 @@ msgstr ""
 #: upstream/_versions/1.7/guides/spring-web.adoc:426
 #, no-wrap
 msgid "Controller method return types"
-msgstr ""
+msgstr "コントローラメソッドの戻り値の型"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-web.adoc:429
 #: upstream/_versions/1.7/guides/spring-web.adoc:444
 msgid "The following method return types are supported:"
-msgstr ""
+msgstr "以下のメソッドの戻り値の型がサポートされています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-web.adoc:431
 msgid "Primitive types"
-msgstr ""
+msgstr "プリミティブ型"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-web.adoc:432
 msgid "String (which will be used as a literal, no Spring MVC view support is provided)"
-msgstr ""
+msgstr "文字列 (リテラルとして使用されます。Spring MVC ビューのサポートはありません)"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-web.adoc:433
@@ -789,7 +789,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/spring-web.adoc:434
 #: upstream/_versions/1.7/guides/spring-web.adoc:446
 msgid "`org.springframework.http.ResponseEntity`"
-msgstr ""
+msgstr "`org.springframework.http.ResponseEntity`"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/spring-web.adoc:435
@@ -811,7 +811,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-web.adoc:447
 msgid "`java.util.Map`"
-msgstr ""
+msgstr "`java.util.Map`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-web.adoc:449
@@ -894,25 +894,25 @@ msgstr ""
 #: upstream/_versions/1.7/guides/spring-web.adoc:478
 #, no-wrap
 msgid "@RequestMapping(path=\"/api\")"
-msgstr ""
+msgstr "@RequestMapping(path=\"/api\")"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:479
 #, no-wrap
 msgid "@Path(\"/api\")"
-msgstr ""
+msgstr "@Path(\"/api\")"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:482
 #, no-wrap
 msgid "@RequestMapping(consumes=\"application/json\")"
-msgstr ""
+msgstr "@RequestMapping(consumes=\"application/json\")"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:483
 #, no-wrap
 msgid "@Consumes(\"application/json\")"
-msgstr ""
+msgstr "@Consumes(\"application/json\")"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:486
@@ -924,19 +924,19 @@ msgstr ""
 #: upstream/_versions/1.7/guides/spring-web.adoc:487
 #, no-wrap
 msgid "@Produces(\"application/json\")"
-msgstr ""
+msgstr "@Produces(\"application/json\")"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:491
 #, no-wrap
 msgid "@QueryParam"
-msgstr ""
+msgstr "@QueryParam"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:495
 #, no-wrap
 msgid "@PathParam"
-msgstr ""
+msgstr "@PathParam"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:501
@@ -949,7 +949,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/spring-web.adoc:509
 #, no-wrap
 msgid "No equivalent in JAX-RS"
-msgstr ""
+msgstr "JAX-RSには同等のものはありません。"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:512
