--- a/l10n/po/ja_JP/_versions/1.11/guides/cache.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/cache.adoc.po
@@ -534,18 +534,18 @@ msgstr "キャッシュからエントリーを削除します。"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:317
 msgid "When a method annotated with `@CacheInvalidate` is invoked, Quarkus will compute a cache key and use it to try to remove an existing entry from the cache.  If the method has one or more arguments, the key computation is done from all the method arguments if none of them is annotated with `@CacheKey`, or all the arguments annotated with `@CacheKey` otherwise.  This annotation can also be used on a method with no arguments, a default key derived from the cache name is used in that case.  If the key does not identify any cache entry, nothing will happen."
-msgstr ""
+msgstr "`@CacheInvalidate` でアノテーションされたメソッドが呼び出されると、Quarkusはキャッシュキーを計算し、それを使用してキャッシュから既存のエントリーを削除しようとします。メソッドに1つ以上の引数がある場合、キーの計算は、 `@CacheKey` でアノテーションされていない場合はすべてのメソッド引数から、そうでない場合は `@CacheKey` でアノテーションされているすべての引数から行われます。このアノテーションは引数を持たないメソッドでも使用でき、その場合はキャッシュ名から派生したデフォルトのキーが使用されます。キーがキャッシュエントリーを識別しない場合は、何も起こりません。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/cache.adoc:318
 #, no-wrap
 msgid "@CacheInvalidateAll"
-msgstr ""
+msgstr "@CacheInvalidateAll"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:321
 msgid "When a method annotated with `@CacheInvalidateAll` is invoked, Quarkus will remove all entries from the cache."
-msgstr ""
+msgstr "`@CacheInvalidateAll` でアノテーションされたメソッドが呼び出されると、Quarkusはキャッシュからすべてのエントリーを削除します。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/cache.adoc:322
@@ -556,12 +556,12 @@ msgstr "@CacheKey"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:326
 msgid "When a method argument is annotated with `@CacheKey`, it is identified as a part of the cache key during an invocation of a method annotated with `@CacheResult` or `@CacheInvalidate`."
-msgstr ""
+msgstr "メソッドの引数が `@CacheKey` でアノテーションされている場合、 `@CacheResult` または `@CacheInvalidate` でアノテーションされたメソッドの呼び出し時にキャッシュキーの一部として識別されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:328
 msgid "This annotation is optional and should only be used when some of the method arguments are NOT part of the cache key."
-msgstr ""
+msgstr "このアノテーションはオプションで、メソッドの引数の一部がキャッシュキーの一部ではない場合にのみ使用されるべきです。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/cache.adoc:329
@@ -674,12 +674,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:381
 msgid "Each of the Caffeine caches backing up the Quarkus application data caching extension can be configured using the following properties in the `application.properties` file. By default caches do not perform any type of eviction if not configured."
-msgstr ""
+msgstr "Quarkusアプリケーションのデータキャッシュエクステンションを支える各Caffeineキャッシュは、 `application.properties` ファイルの以下のプロパティーを使用して設定することができます。デフォルトでは、設定されていない場合、キャッシュはどのようなタイプの退避も実行しません。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/cache.adoc:385
 msgid "You need to replace `cache-name` in all of the following properties with the real name of the cache you want to configure."
-msgstr ""
+msgstr "以下のすべてのプロパティーで `cache-name` を設定したいキャッシュの実名に置き換える必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:390
@@ -819,13 +819,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:465
 msgid "The cache key is explicitly composed of two elements. The method signature also contains a third argument which is not part of the key."
-msgstr ""
+msgstr "キャッシュキーは明示的に 2 つの要素で構成されています。メソッドシグネチャには、キーの一部ではない第三引数も含まれています。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/cache.adoc:466
 #, no-wrap
 msgid "Default cache key"
-msgstr ""
+msgstr "デフォルトのキャッシュキー"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/cache.adoc:485
@@ -849,13 +849,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:496
 msgid "A unique default cache key derived from the cache name is used because the method has no arguments."
-msgstr ""
+msgstr "メソッドには引数がないため、キャッシュ名から派生した一意のデフォルトキャッシュキーが使用されます。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/cache.adoc:497
 #, no-wrap
 msgid "Multiple annotations on a single method"
-msgstr ""
+msgstr "単一のメソッドに複数のアノテーションを付与"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/cache.adoc:504
@@ -896,28 +896,28 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:525
 msgid "This method can be used to force a refresh of the cache entry corresponding to the given key."
-msgstr ""
+msgstr "このメソッドを使用して、指定されたキーに対応するキャッシュエントリーを強制的に更新することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:526
 msgid "This method will invalidate all entries from the `foo` and `bar` caches with a single call."
-msgstr ""
+msgstr "このメソッドは、一度の呼び出しで `foo` および `bar` キャッシュからのすべてのエントリーを無効にします。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/cache.adoc:528
 #, no-wrap
 msgid "Negative caching and nulls"
-msgstr ""
+msgstr "ネガティブキャッシングとnull"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:533
 msgid "Sometimes one wants to cache the result of an (expensive) remote call.  If the remote call fails, one may not want to cache the result or exception, but rather re-try the remote call on the next invocation."
-msgstr ""
+msgstr "(高価な)リモートコールの結果をキャッシュしたい場合があります。リモートコールが失敗した場合、結果や例外をキャッシュするのではなく、 次の呼び出しでリモートコールを再試行したい場合があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:536
 msgid "A simple approach could be to catch the exception and return `null`, so that the caller can act accordingly:"
-msgstr ""
+msgstr "シンプルなアプローチとしては、例外をキャッチして `null` を返すことで、呼び出し元がそれに応じて行動できるようにすることができます。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/cache.adoc:537
@@ -969,39 +969,39 @@ msgstr ""
 #: upstream/_versions/1.11/guides/cache.adoc:562
 #: upstream/_versions/1.11/guides/cache.adoc:595
 msgid "Call the method to call the remote"
-msgstr ""
+msgstr "リモートを呼び出すためにメソッドを実行"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:563
 msgid "Do the remote call and return its result"
-msgstr ""
+msgstr "リモートコールを行い、その結果を返却"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:564
 msgid "Return in case of exception"
-msgstr ""
+msgstr "例外が発生時にリターンする"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:569
 msgid "This approach has an unfortunate side effect: as we said before, Quarkus can also cache `null` values. Which means that the next call to `callRemote()` with the same parameter value will be answered out of the cache, returning `null` and no remote call will be done.  This may be desired in some scenarios, but usually one wants to retry the remote call until it returns a result."
-msgstr ""
+msgstr "このアプローチには不幸な副作用があります。先に述べたように、Quarkusは `null` の値をキャッシュすることもできます。つまり、同じパラメーター値を持つ `callRemote()` への次の呼び出しは、キャッシュの外で応答され、 `null` が返され、リモートコールは行われないということです。これはシナリオによっては望ましいことかもしれませんが、通常は結果が返ってくるまでリモートコールを再試行したいものです。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/cache.adoc:570
 #, no-wrap
 msgid "Let exceptions bubble up"
-msgstr ""
+msgstr "例外をバブルアップさせる"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:574
 msgid "To prevent the cache from caching (marker) results from a remote call, we need to let the exception bubble out of the called method and catch it at the caller side:"
-msgstr ""
+msgstr "リモートコールの結果をキャッシュ(マーカー)しないようにするには、コールされたメソッドから例外をバブルアップし、呼び出し側でキャッチする必要があります。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/cache.adoc:575
 #, no-wrap
 msgid "With Exception bubbling up"
-msgstr ""
+msgstr "例外をバブルアップ"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/cache.adoc:585
@@ -1041,14 +1041,14 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:596
 msgid "Exceptions may bubble up"
-msgstr ""
+msgstr "例外がバブルアップする場合がある"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:597
 msgid "This can throw all kinds of remote exceptions"
-msgstr ""
+msgstr "これは、あらゆる種類のリモート例外を投げることができます"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cache.adoc:601
 msgid "When the call to the remote throws an exception, the cache does not store the result, so that a subsequent call to `callRemote()` with the same parameter value will not be answered out of the cache.  It will instead result in another attempt to call the remote."
-msgstr ""
+msgstr "リモートへの呼び出しが例外をスローした場合、キャッシュは結果を保存しないので、 同じパラメーター値を持つ `callRemote()` への後続の呼び出しがキャッシュから応答されることはありません。その代わりに、リモートへの呼び出しを再度試みることになります。"
