Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/dev-ui.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/dev-ui.adoc.po
@@ -100,7 +100,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/dev-ui.adoc:37
 msgid "image:dev-ui-embedded.png[alt=Dev UI embedded,role=\"center\"]"
-msgstr ""
+msgstr "image:dev-ui-embedded.png[alt=Dev UI embedded,role=\"center\"]"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/dev-ui.adoc:41
