--- a/l10n/po/ja_JP/_versions/1.11/guides/redis.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/redis.adoc.po
@@ -262,17 +262,17 @@ msgstr ""
 #: upstream/_versions/1.11/guides/redis.adoc:126
 #, no-wrap
 msgid "Creating the Increment Service"
-msgstr ""
+msgstr "インクリメントサービスの作成"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:130
 msgid "We are going to create an `IncrementService` class which will play the role of a Redis client.  With this class, we'll be able to perform the `SET`, `GET` , `DELET`, `KEYS` and `INCRBY` Redis commands."
-msgstr ""
+msgstr "Redis クライアントの役割を果たす `IncrementService` クラスを作成します。このクラスで、 `SET` 、 `GET` 、 `DELET` 、 `KEYS` 、 `INCRBY` Redis コマンドを実行できるようになります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:132
 msgid "Create the `src/main/java/org/acme/redis/IncrementService.java` file, with the following content:"
-msgstr ""
+msgstr "以下の内容の `src/main/java/org/acme/redis/IncrementService.java` ファイルを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:140
@@ -901,7 +901,7 @@ msgstr "`first` のインクリメントを削除します。"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:490
 msgid "Now, running the command `curl http://localhost:8080/increments` should return an empty list `[]`"
-msgstr ""
+msgstr "さて、コマンドを実行すると `curl http://localhost:8080/increments` は空のリスト `[]` を返します。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/redis.adoc:491
@@ -912,7 +912,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:494
 msgid "You can run the application as a conventional jar file."
-msgstr ""
+msgstr "従来の jar ファイルとしてアプリケーションを実行することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:496
@@ -928,7 +928,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:503
 msgid "This command will start a Redis instance to execute the tests. Thus your Redis containers need to be stopped."
-msgstr ""
+msgstr "このコマンドはテストを実行するためにRedisインスタンスを起動します。そのため、Redis コンテナーを停止する必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:505
@@ -950,12 +950,12 @@ msgstr "ネイティブ実行"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:517
 msgid "You can also create a native executable from this application without making any source code changes. A native executable removes the dependency on the JVM: everything needed to run the application on the target platform is included in the executable, allowing the application to run with minimal resource overhead."
-msgstr ""
+msgstr "ソースコードを変更することなく、このアプリケーションからネイティブ実行ファイルを作成することもできます。ネイティブ実行ファイルは、JVMへの依存を取り除きます。ターゲットプラットフォーム上でアプリケーションを実行するために必要なすべてのものが実行ファイルに含まれているため、アプリケーションを最小限のリソースオーバーヘッドで実行することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/redis.adoc:521
 msgid "Compiling a native executable takes a bit longer, as GraalVM performs additional steps to remove unnecessary codepaths. Use the `native` profile to compile a native executable:"
-msgstr ""
+msgstr "GraalVMは、不要なコードパスを削除するために追加のステップを実行するため、ネイティブ実行ファイルのコンパイルには少し時間がかかります。 `native` プロファイルを使用して、ネイティブ実行ファイルをコンパイルしてください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/redis.adoc:525
