--- a/l10n/po/ja_JP/_versions/1.7/guides/vault.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/vault.adoc.po
@@ -973,7 +973,7 @@ msgstr "参照"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/vault.adoc:520
 msgid "https://www.vaultproject.io/[HashiCorp Vault]"
-msgstr ""
+msgstr "https://www.vaultproject.io/[HashiCorp Vault]"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/vault.adoc:520
