--- a/l10n/po/ja_JP/_versions/1.11/guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-jwt.adoc.po
@@ -371,7 +371,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-jwt.adoc:187
 msgid "Now that the REST endpoint is running, we can access it using a command line tool like curl:"
-msgstr ""
+msgstr "REST エンドポイントが実行されているので、curl のようなコマンドラインツールを使ってアクセスすることができます。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/security-jwt.adoc:188
@@ -420,7 +420,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-jwt.adoc:206
 msgid "So now let's actually secure something. Take a look at the new endpoint method `helloRolesAllowed` in the following:"
-msgstr ""
+msgstr "では実際に何かをセキュア化してみましょう。下記の新しいエンドポイントメソッド `helloRolesAllowed` を見てみましょう。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/security-jwt.adoc:207
