--- a/l10n/po/ja_JP/_versions/1.7/guides/security-oauth2.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/security-oauth2.adoc.po
@@ -302,7 +302,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-oauth2.adoc:158
 msgid "Now that the REST endpoint is running, we can access it using a command line tool like curl:"
-msgstr ""
+msgstr "REST エンドポイントが実行されているので、curl のようなコマンドラインツールを使ってアクセスすることができます。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/security-oauth2.adoc:159
@@ -331,17 +331,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-oauth2.adoc:170
 msgid "`isSecure` is false as https is not used"
-msgstr ""
+msgstr "`isSecure` は https が使用されていないため false です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-oauth2.adoc:171
 msgid "`authScheme` is null"
-msgstr ""
+msgstr "`authScheme` はnullです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-oauth2.adoc:173
 msgid "So now let's actually secure something. Take a look at the new endpoint method `helloRolesAllowed` in the following:"
-msgstr ""
+msgstr "では実際に何かをセキュア化してみましょう。下記の新しいエンドポイントメソッド `helloRolesAllowed` を見てみましょう。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-oauth2.adoc:189
